Add role-based login endpoints for Admin/Staff